# HeureLab2.0

./: README.md  main.py  pyproject.toml
static/css/: index.css  index.css.map  style.css
static/scss/: style.scss
templates/: index.html
